# NEA

./: .gitignore  AI_HANDOFF.md  README.md  index.html  package.json  pnpm-lock.yaml
.github/: update.json
.github/releases/: v1.0.0.md  v1.1.1.md  v1.1.2.md  v1.1.3.md  v1.1.4.md  v1.1.5.md  v1.1.6.md  v1.1.7.md  v1.1.8.md  v1.2.1.md  v1.2.6.md  v1.2.7.md  v1.3.0.md  v1.3.1.md  v1.3.2.md  v1.3.3.md  v1.3.4.md  v1.3.5.md  v1.4.0.md
.github/workflows/: release.yml
docs/: GITHUB_SETUP.md  STEAM_IMPLEMENTATION.md  release.workflow.template.yml
scripts/: monitor-window-input.ps1  publish-gitee-release.ps1  test-update-mirrors.ps1
src/: App.css  App.tsx  PluginOverlay.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: adapters.rs  lib.rs  main.rs  oopz_daily.rs  perfect_arena.rs  steam.rs
src-tauri/wix/: legacy-cleanup.wxs
